@@ -14,12 +14,13 @@
 
     /**
      * Get the nick suggest list
+     * @param {number} userId User id
      * @param {string} part Nick start part
      * @param {function(Array)} callback Callback with result
      */
-    var getNickSuggestList = function(part, callback) {
+    var getNickSuggestList = function(userId, part, callback) {
         var
-            cacheKey = 'suggest_' + part,
+            cacheKey = 'suggest_' + userId + '_' + part,
             result = twic.cache.get(cacheKey);
 
         if (null !== result) {
@@ -28,8 +29,26 @@
         }
 
         twic.db.openQuery(
-            'select screen_name from users where screen_name_lower like ? and screen_name_lower <> ? limit 5',
-            [part + '%', part],
+            'select distinct(screen_name) ' +
+            'from ( ' +
+                'select u.screen_name ' +
+                'from timeline tl ' +
+                    'inner join tweets t on (tl.tweet_id = t.id) ' +
+                    'inner join users u on (t.user_id = u.id) ' +
+                'where tl.user_id = ? and u.screen_name_lower like ? and u.screen_name_lower <> ? ' +
+                'union ' +
+                'select u.screen_name ' +
+                'from mentions m ' +
+                    'inner join tweets t on (m.tweet_id = t.id) ' +
+                    'inner join users u on (t.user_id = u.id) ' +
+                'where m.user_id = ? and u.screen_name_lower like ? and u.screen_name_lower <> ? ' +
+            ') ' +
+            'order by screen_name ' +
+            'limit 5',
+            [
+                userId, part + '%', part,
+                userId, part + '%', part
+            ],
             function(rows) {
                 var
                     result = [],
@@ -48,10 +67,11 @@
 
     twic.requests.subscribe('getNickSuggest', function(data, sendResponse) {
         var
+            /** @type {number} **/ userId   = data['userId'],
             /** @type {string} **/ nickPart = data['nickPart'];
 
-        getNickSuggestList( nickPart, function( list ) {
-            sendResponse( list );
+        getNickSuggestList(userId, nickPart, function(list) {
+            sendResponse(list);
         } );
     } );
 
