@@ -137,10 +137,10 @@ twic.twitter.getFriendshipInfo = function(source_id, target_id, callback) {
  * TODO think about refactoring
  * Get user timeline
  * @param {number} id User identifier
- * @param {function(twic.DBObjectList,twic.DBObjectList)} callback Callback function
  * @param {Object} options Options
+ * @param {function(twic.DBObjectList,twic.DBObjectList)} callback Callback function
  */
-twic.twitter.getHomeTimeline = function(id, callback, options) {
+twic.twitter.getHomeTimeline = function(id, options, callback) {
     var
         tmpTweet = new twic.db.obj.Tweet(),
         tmpUser  = new twic.db.obj.User(),
