@@ -1,4 +1,5 @@
 0.47: (in development)
+    * Unique suggest boxes for each account
 
 0.46:
     * Favicon size fixed
